[package]
name = "remo-graph"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.204", features = ["derive"] }
time = { version = "0.3.36", features = ["serde-well-known"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.22"
base64 = "0.22.1"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
clap = { version = "4.5.15", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
